[package]
name = "microbit-demos"
version = "0.1.0"
authors = ["David Cristofaro <david@dtcristo.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
heapless = "0.4.1"
microbit = "0.7.0"
nb = "0.1.1"
nrf51 = "0.6.0"
nrf51-hal = "0.6.1"
panic-halt = "0.2.0"
rand_core = { version = "0.3.0", default-features = false }
rand_xoshiro = "0.1.0"
